# goit-pythonweb-hw-10

./: .env.example  .gitignore  alembic.ini  connect.py  main.py  pyproject.toml
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/api/const/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email_service.py  upload_file.py  users.py
