[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "'Mariia'",email = "shymanskam524@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.11.3,<0.12.0)",
    "limits (>=4.6,<5.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
